--- a/4_Train_Model.ipynb
+++ b/4_Train_Model.ipynb
@@ -4,53 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Model\n",
+    "# Train the StarNet Model\n",
     "\n",
     "This notebook takes you through the steps of how to train a StarNet Model\n",
+    "- Required Python packages: `numpy h5py keras sklearn`\n",
+    "- Required data files: training_data.h5, mean_and_std.npy\n",
     "\n",
-    "## required packages:\n",
-    "- numpy\n",
-    "- h5py\n",
-    "- random\n",
-    "- Keras 2\n",
-    "  - for Keras 1 users, see $3\\_Train\\_Model\\_Keras\\_1.ipynb$\n",
-    "- Tensorflow or Theano\n",
-    "  - backend for Keras\n",
-    "\n",
-    "NOTE: for error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano\n",
-    "\n",
-    "## required data files:\n",
-    "- training_data.h5\n",
-    "  - can be created in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded  in $1\\_Download\\_Data.ipynb$\n",
-    "- mean_and_std.npy\n",
-    "  - can be created in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ or downloaded in $1\\_Download\\_Data.ipynb$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import random\n",
-    "import h5py\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, InputLayer, Flatten\n",
-    "from keras.layers.convolutional import Conv1D\n",
-    "from keras.layers.convolutional import MaxPooling1D\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load data for normalizing labels"
+    "Note: We use tensorflow for the keras backend. For error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano"
    ]
   },
   {
@@ -61,7 +21,36 @@
    },
    "outputs": [],
    "source": [
-    "mean_and_std = np.load('mean_and_std.npy')\n",
+    "import numpy as np\n",
+    "import h5py\n",
+    "\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, InputLayer, Flatten\n",
+    "from keras.layers.convolutional import Conv1D\n",
+    "from keras.layers.convolutional import MaxPooling1D\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "datadir = '/home/ubuntu/starnet_data/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Load data for normalizing labels**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mean_and_std = np.load(datadir + 'mean_and_std.npy')\n",
     "mean_labels = mean_and_std[0]\n",
     "std_labels = mean_and_std[1]\n",
     "num_labels = mean_and_std.shape[1]"
@@ -71,7 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define function to normalize labels to approximately have a mean of zero and unit variance\n",
+    "** Normalize labels**\n",
+    "\n",
+    "Define function to normalize labels to approximately have a mean of zero and unit variance\n",
     "NOTE: this is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
    ]
   },
@@ -84,14 +75,14 @@
    "outputs": [],
    "source": [
     "def normalize(lb):\n",
-    "    return (lb-mean_labels)/std_labels"
+    "    return (lb-mean_labels) / std_labels"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtain reference set"
+    "** Obtain reference set**"
    ]
   },
   {
@@ -102,88 +93,83 @@
    },
    "outputs": [],
    "source": [
-    "savename = 'training_data.h5'"
+    "training_set = 'training_data.h5'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File(savename,\"r\") as F:\n",
-    "    spectra = F[\"spectra\"][:]\n",
-    "    labels = np.column_stack((F[\"TEFF\"][:],F[\"LOGG\"][:],F[\"FE_H\"][:]))\n",
-    "    # Normalize labels\n",
+    "with h5py.File(datadir + training_set, 'r') as F:\n",
+    "    spectra = F['spectra'][:]\n",
+    "    labels = np.column_stack((F['TEFF'][:],F['LOGG'][:],F['FE_H'][:]))\n",
     "    labels = normalize(labels)\n",
-    "print('Reference set includes '+str(len(spectra))+' individual visit spectra.')"
+    "print('Reference set includes ' + str(len(spectra)) + ' individual visit spectra.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# define the number of wavelength bins (typicall 7214)\n",
-    "num_fluxes = spectra.shape[1]\n",
-    "print('Each spectra contains '+str(num_fluxes)+' wavelength bins')"
+    "# define the number of wavelength bins, i.e. flux values\n",
+    "num_flux = spectra.shape[1]\n",
+    "print('Each spectra contains ' + str(num_flux) + ' wavelength bins')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Randomize order and separate into training and CV sets\n",
-    "This is done to randomize order for proper training\n",
-    "The data is then split the reference set into training and cross-validation sets\n",
-    "### Default:\n",
-    "- $num\\_train$ = 41000 spectra"
+    "**Randomize order and separate into training and cross-validation sets**\n",
+    "\n",
+    "We shuffle around the data to avoid local effects. The data is then split the reference set into training and cross-validation sets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "num_train=41000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "reference_data = np.column_stack((spectra,labels))\n",
+    "# number of spectra used in training\n",
+    "num_train = 41000\n",
+    "# SF: use the whole set to do k-fold validation\n",
+    "# num_train = len(spectra)\n",
+    "\n",
+    "reference_data = np.column_stack((spectra, labels))\n",
     "np.random.shuffle(reference_data)\n",
     "\n",
-    "train_spectra = reference_data[0:num_train,0:num_fluxes]\n",
-    "# Reshape spectra for convolutional layers\n",
+    "train_spectra = reference_data[0:num_train, 0:num_flux]\n",
     "train_spectra = train_spectra.reshape(train_spectra.shape[0], train_spectra.shape[1], 1)\n",
-    "train_labels = reference_data[0:num_train,num_fluxes:]\n",
+    "train_labels = reference_data[0:num_train, num_flux:]\n",
     "\n",
-    "cv_spectra = reference_data[num_train:,0:num_fluxes]\n",
+    "cv_spectra = reference_data[num_train:, 0:num_flux]\n",
     "cv_spectra = cv_spectra.reshape(cv_spectra.shape[0], cv_spectra.shape[1], 1)\n",
-    "cv_labels = reference_data[num_train:,num_fluxes:]\n",
+    "cv_labels = reference_data[num_train:, num_flux:]\n",
     "\n",
-    "print('Training set includes '+str(len(train_spectra))+' spectra and the cross-validation set includes '+str(len(cv_spectra))+' spectra')"
+    "print('Training set includes ' + str(len(train_spectra)) + ' spectra and the cross-validation set includes ' + str(len(cv_spectra))+' spectra')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define some model variables"
+    "**Build the StarNet model architecture**\n",
+    "\n",
+    "The StarNet architecture is built with:\n",
+    "- input layer\n",
+    "- 2 convolutional layers\n",
+    "- 1 maxpooling layer followed by flattening for the fully connected layer\n",
+    "- 2 fully connected layers\n",
+    "- output layer\n",
+    "\n",
+    "First, let's define some model variables."
    ]
   },
   {
@@ -201,7 +187,7 @@
     "initializer = 'he_normal'\n",
     "\n",
     "# shape of input spectra that is fed into the input layer\n",
-    "input_shape = (None,num_fluxes,1)\n",
+    "input_shape = (None, num_flux, 1)\n",
     "\n",
     "# number of filters used in the convolutional layers\n",
     "num_filters = [4,16]\n",
@@ -213,7 +199,7 @@
     "pool_length = 4\n",
     "\n",
     "# number of nodes in each of the hidden fully connected layers\n",
-    "num_hidden_nodes = [256,128]\n",
+    "num_hidden = [256,128]\n",
     "\n",
     "# number of spectra fed into model at once during training\n",
     "batch_size = 64\n",
@@ -235,18 +221,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Build Model Architecture:\n",
-    "- input layer\n",
-    "- 2 convolutional layers\n",
-    "- 1 maxpooling layer followed by flattening for the fully connected layer\n",
-    "- 2 fully connected layers\n",
-    "- output layer"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -255,33 +229,25 @@
    "outputs": [],
    "source": [
     "model = Sequential([\n",
-    "\n",
     "    InputLayer(batch_input_shape=input_shape),\n",
-    "        \n",
     "    Conv1D(kernel_initializer=initializer, activation=activation, padding=\"same\", filters=num_filters[0], kernel_size=filter_length),\n",
-    "\n",
     "    Conv1D(kernel_initializer=initializer, activation=activation, padding=\"same\", filters=num_filters[1], kernel_size=filter_length),\n",
-    "        \n",
     "    MaxPooling1D(pool_size=pool_length),\n",
-    "\n",
     "    Flatten(),\n",
-    "\n",
-    "    Dense(units=num_hidden_nodes[0], kernel_initializer=initializer, activation=activation),\n",
-    "        \n",
-    "    Dense(units=num_hidden_nodes[1], kernel_initializer=initializer, activation=activation),\n",
-    "\n",
-    "    Dense(units=num_labels, activation=\"linear\", input_dim=num_hidden_nodes[1]),\n",
-    "]) "
+    "    Dense(units=num_hidden[0], kernel_initializer=initializer, activation=activation),\n",
+    "    Dense(units=num_hidden[1], kernel_initializer=initializer, activation=activation),\n",
+    "    Dense(units=num_labels, activation=\"linear\", input_dim=num_hidden[1]),\n",
+    "])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More model techniques:\n",
-    "- The $Adam$ optimizer is the gradient descent algorithm used for minimizing the loss function\n",
-    "- $EarlyStopping$ uses the cross-validation set to test the model following every iteration and stops the training if the cv loss does not decrease by $min\\_delta$ after $patience$ iterations\n",
-    "- $ReduceLROnPlateau$ is a form of learning rate decay where the learning rate is decreased by a factor of $factor$ if the training loss does not decrease by $epsilon$ after $patience$ iterations unless the learning rate has reached $min\\_lr$"
+    "**More model techniques**\n",
+    "* The `Adam` optimizer is the gradient descent algorithm used for minimizing the loss function\n",
+    "* `EarlyStopping` uses the cross-validation set to test the model following every iteration and stops the training if the cv loss does not decrease by `min_delta` after `patience` iterations\n",
+    "* `ReduceLROnPlateau` is a form of learning rate decay where the learning rate is decreased by a factor of `factor` if the training loss does not decrease by `epsilon` after `patience` iterations unless the learning rate has reached `min_lr`"
    ]
   },
   {
@@ -292,14 +258,19 @@
    },
    "outputs": [],
    "source": [
-    "# compile model\n",
-    "## Default loss function:\n",
+    "# Default loss function parameters\n",
     "early_stopping_min_delta = 0.0001\n",
     "early_stopping_patience = 4\n",
     "reduce_lr_factor = 0.5\n",
     "reuce_lr_epsilon = 0.0009\n",
     "reduce_lr_patience = 2\n",
-    "reduce_lr_min = 0.00008"
+    "reduce_lr_min = 0.00008\n",
+    "\n",
+    "# loss function to minimize\n",
+    "loss_function = 'mean_squared_error'\n",
+    "\n",
+    "# compute accuracy and mean absolute deviation\n",
+    "metrics = ['accuracy', 'mae']"
    ]
   },
   {
@@ -323,9 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# compile model\n",
-    "### Default loss function:\n",
-    "- loss_function = mean squared error"
+    "**Compile model**"
    ]
   },
   {
@@ -336,33 +305,46 @@
    },
    "outputs": [],
    "source": [
-    "loss_function = 'mean_squared_error'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model.compile(optimizer=optimizer, loss=loss_function)"
+    "model.compile(optimizer=optimizer, loss=loss_function, metrics=metrics)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# train model"
+    "**Train model**\n",
+    "\n",
+    "Apply k-folding (with 3-fold) cross validation test harness."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# fix random seed for reproducibility\n",
+    "#seed = 7\n",
+    "#np.random.seed(seed)\n",
+    "\n",
+    "# this stuff is still a bit buggy\n",
+    "#kfold = StratifiedKFold(n_splits=3, shuffle=True, random_state=seed)\n",
+    "#cv_scores = []\n",
+    "#for train, test in kfold.split(train_spectra, train_labels):\n",
+    "#    model.fit(train_spectra[train], train_labels[train], epochs=max_epochs, \n",
+    "#              batch_size=batch_size, callbacks=[reduce_lr,early_stopping],\n",
+    "#              verbose=2)\n",
+    "#    scores = model.evaluate(train_spectra[test], train_labels[test], verbose=2)\n",
+    "#    print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))\n",
+    "#    cv_scores.append(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.fit(train_spectra, train_labels, validation_data=(cv_spectra, cv_labels),\n",
@@ -374,39 +356,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save model"
+    "**Save model**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "savename = 'Model_0'\n",
-    "model.save(savename+'.h5')\n",
-    "print('Model saved as '+savename)"
+    "starnet_model = 'starnet_cnn.h5'\n",
+    "model.save(datadir + starnet_model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
