--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -4,134 +4,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtain training data and separate out a High S/N Test set\n",
-    "This notebook takes you through the steps of how to preprocess the training data into the form necessary for training StarNet\n",
-    "## required packages:\n",
-    "- numpy\n",
-    "- h5py\n",
-    "## required data files:\n",
-    "- apStar_visits_main.h5\n",
-    "  - can be downloaded in $1\\_Download\\_Data.ipynb$"
+    "# Preprocess training and test set for StarNet\n",
+    "This notebook takes you through the steps of how to pre-process the training data necessary for training StarNet and separate out a high S/N test set.\n",
+    "\n",
+    "Requirements:\n",
+    "- python packages: `numpy h5py vos`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import h5py\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 22,
    "metadata": {},
-   "source": [
-    "## Load apStar_visits_main.h5 \n",
-    "a file that contains individual visit spectra along with APOGEE data associated with each star.  File can be downloaded in $1\\_Download\\_Data.ipynb$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "filename = 'apStar_visits_main.h5'\n",
-    "f = h5py.File(filename,\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset keys in file: \n",
-      "\n",
-      "0_H\n",
-      "0_H_ERR\n",
-      "ALPHA_M\n",
-      "AL_H\n",
-      "AL_H_ERR\n",
-      "CA_H\n",
-      "CA_H_ERR\n",
-      "C_H\n",
-      "C_H_ERR\n",
-      "FE_H\n",
-      "FE_H_ERR\n",
-      "IDs\n",
-      "K_H\n",
-      "K_H_ERR\n",
-      "LOGG\n",
-      "LOGG_ERR\n",
-      "MG_H\n",
-      "MG_H_ERR\n",
-      "MN_H\n",
-      "MN_H_ERR\n",
-      "NA_H\n",
-      "NA_H_ERR\n",
-      "NI_H\n",
-      "NI_H_ERR\n",
-      "N_H\n",
-      "N_H_ERR\n",
-      "SI_H\n",
-      "SI_H_ERR\n",
-      "S_H\n",
-      "S_H_ERR\n",
-      "TEFF\n",
-      "TEFF_ERR\n",
-      "TI_H\n",
-      "TI_H_ERR\n",
-      "VRAD\n",
-      "VRAD_ERR\n",
-      "VSCATTER\n",
-      "V_H\n",
-      "V_H_ERR\n",
-      "aspcap_flag\n",
-      "bluegreen_persist\n",
-      "error_spectrum\n",
-      "greenred_persist\n",
-      "num_visits\n",
-      "spectrum\n",
-      "stacked_snr\n",
-      "star_flag\n",
-      "star_flag_indiv\n",
-      "targ1_flag\n",
-      "targ2_flag\n",
-      "visit_snr\n"
+      "apStar_visits_main.h5 downloaded\n"
      ]
     }
    ],
    "source": [
-    "print('Dataset keys in file: \\n')\n",
-    "for i in f.keys(): print i"
+    "import numpy as np\n",
+    "import h5py\n",
+    "import os\n",
+    "import vos\n",
+    "\n",
+    "datadir='/home/ubuntu/starnet_data/'  # or \"/path/to/my/starnet/directory\"\n",
+    "\n",
+    "def starnet_download_file(filename):\n",
+    "    vclient = vos.Client()\n",
+    "    vclient.copy('vos:starnet/public/'+filename, datadir+filename)\n",
+    "    print(filename+' downloaded')\n",
+    "    \n",
+    "starnet_download_file('apStar_visits_main.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the training of StarNet, it is only necessary to obtain the spectra and labels, but we need to set restrictions on the training set to obtain the labels of highest validity so we will first include the $APOGEE\\_IDs$, the spectra, the $S/N$ of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$,  $[Fe/H]$,  $V_{scatter}$,  $STARFLAGs$, and $ASPCAPFLAGs$"
+    "**Load the file that contains individual visit spectra along with APOGEE data associated with each star**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "filename = datadir + 'apStar_visits_main.h5'\n",
+    "f = h5py.File(filename,'r')\n",
+    "print('Dataset keys in file: \\n')\n",
+    "f.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Load the APOGEE data set into memory**\n",
+    "\n",
+    "For the training of StarNet, it is only necessary to obtain the spectra and labels, but we need to set restrictions on the training set to obtain the labels of highest validity so we will first include APOGEE_IDs, the spectra, the S/N of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$,  [Fe/H],  $V_{scatter}$,  STARFLAGs, and ASPCAPFLAGs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -161,13 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Separate out a dataset with good labels:\n",
-    "## Default restrictions:\n",
+    "**Separate out a dataset with good labels**\n",
     "- combined spectral S/N $\\geq$ 200\n",
     "- STARFLAG = 0\n",
     "- ASPCAPFLAG = 0\n",
     "- 4000K < $T_{\\mathrm{eff}}$ < 5500K\n",
-    "- -3.0 dex < $[Fe/H]$\n",
+    "- -3.0 dex < [Fe/H]\n",
     "- $\\log(g)$ $\\neq$ -9999. (value defined by ASPCAP when no ASPCAP labels are given)\n",
     "- $V_{scatter}$ < 1.0 km/s"
    ]
@@ -176,7 +117,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -190,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -218,17 +157,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select the first $num\\_train$ visits for the reference set (later to be split into training and cross-validation sets)\n",
-    "### Default number reference spectra:\n",
-    "- num_ref = 44784"
+    "**Select the  visits for the reference set**\n",
+    "\n",
+    "Later on, it will be be split into training and cross-validation sets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -239,7 +176,7 @@
     }
    ],
    "source": [
-    "num_ref = 44784\n",
+    "num_ref = 44784 # number of reference spectra\n",
     "\n",
     "ap_id_train = ap_id[0:num_ref]\n",
     "spectra = spectra[0:num_ref]\n",
@@ -254,17 +191,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Separate a test set of $APOGEE\\_IDs$ \n",
-    "- These APOGEE IDs will be processed in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ to create StarNet's $High\\_S/N\\_Test\\_Set$\n",
+    "**Separate a test set of APOGEE IDs**\n",
+    "\n",
+    "- These APOGEE IDs will be processed in a following notebook to create StarNet's High S/N test set\n",
     "- Make sure there are no duplicates from test set that are also in training set (this is necessary because there are some duplicates in the APOGEE v603.fits file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -276,8 +212,8 @@
    ],
    "source": [
     "ap_id_test = ap_id[num_ref:]\n",
-    "\n",
     "ap_id_test = list(set(ap_id_test)-set(ap_id_train))\n",
+    "np.save('high_snr_test_apids', ap_id_test)\n",
     "print(str(len(ap_id_test))+' stars to be processed for the High S/N test set.')"
    ]
   },
@@ -285,44 +221,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## save APOGEE IDs for High S/N Test set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "APOGEE IDs for the high S/N test set are saved to be used in 3_Preprocessing_of_Test_Data.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.save('high_snr_test_apids', ap_id_test)\n",
-    "print('APOGEE IDs for the high S/N test set are saved to be used in 3_Preprocessing_of_Test_Data.ipynb')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Normalize spectra:\n",
-    "### 1. separate into three chips\n",
-    "### 2. divide by median value in each chip\n",
-    "### 3. recombine each spectrum into a vector of 7214 flux values"
+    "**Normalize spectra**\n",
+    "1. separate into three chips\n",
+    "2. divide by median value in each chip\n",
+    "3. recombine each spectrum into a vector of 7214 flux values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -338,9 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -359,13 +266,13 @@
     "\n",
     "# Normalize spectra by chips\n",
     "\n",
-    "blue_sp = (blue_sp.T/np.median(blue_sp, axis=1)).T\n",
-    "green_sp = (green_sp.T/np.median(green_sp, axis=1)).T\n",
-    "red_sp = (red_sp.T/np.median(red_sp, axis=1)).T \n",
+    "blue_sp = (blue_sp.T / np.median(blue_sp, axis=1)).T\n",
+    "green_sp = (green_sp.T / np.median(green_sp, axis=1)).T\n",
+    "red_sp = (red_sp.T / np.median(red_sp, axis=1)).T \n",
     "\n",
     "# Recombine spectra\n",
     "\n",
-    "spectra = np.column_stack((blue_sp,green_sp,red_sp))\n",
+    "spectra = np.column_stack((blue_sp, green_sp, red_sp))\n",
     "\n",
     "print('Reference spectra dataset now contains ' + str(spectra.shape[0])+' spectra, each with '+str(spectra.shape[1])+' wavelength bins')"
    ]
@@ -374,15 +281,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save new training data file with APOGEE IDs, spectra, and labels"
+    "**Save new training data file**\n",
+    "\n",
+    "with APOGEE IDs, spectra, and labels."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -393,11 +300,10 @@
     }
    ],
    "source": [
-    "savename = 'training_data.h5'\n",
-    "# if path already exist, you must remove it first using os.remove(path) \n",
+    "savename = datadir + 'training_data.h5'\n",
     "os.remove(savename)\n",
     "dt = h5py.special_dtype(vlen=bytes)\n",
-    "with h5py.File(savename, \"a\") as f:\n",
+    "with h5py.File(savename, 'a') as f:\n",
     "     \n",
     "    spectra_ds = f.create_dataset('spectra', spectra.shape, dtype=\"f\")\n",
     "    teff_ds = f.create_dataset('TEFF', teff.shape, dtype=\"f\")\n",
@@ -411,7 +317,7 @@
     "    fe_h_ds[:] = fe_h\n",
     "    ap_id_ds[:] = ap_id_train.tolist()\n",
     "\n",
-    "print(savename+' has been saved as the reference set to be used in 4_Train_Model.ipynb')"
+    "print(savename + ' has been saved as the reference set to be used in 4_Train_Model.ipynb')"
    ]
   },
   {
