--- a/3_Preprocessing_of_Test_Data.ipynb
+++ b/3_Preprocessing_of_Test_Data.ipynb
@@ -4,22 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtain test data\n",
+    "# Pre-process test data\n",
     "\n",
     "This notebook takes you through the steps of how to preprocess a high S/N and low S/N test set\n",
-    "\n",
-    "## required packages:\n",
-    "- numpy\n",
-    "- h5py\n",
-    "\n",
-    "## required data files:\n",
-    "- apStar_combined_main.h5\n",
-    "  - can be downloaded in $1\\_Download\\_Data.ipynb$"
+    "* required packages: numpy, h5py\n",
+    "* required data files: apStar_combined_main.h5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -27,35 +21,39 @@
    "source": [
     "import numpy as np\n",
     "import h5py\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load apStar_combined_main.h5 \n",
-    "a file that contains combined spectra along with APOGEE data associated with each star. File can be downloaded in $1\\_Download\\_Data.ipynb$"
+    "import os\n",
+    "import vos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apStar_combined_main.h5 downloaded\n"
+     ]
+    }
+   ],
    "source": [
-    "filename = 'apStar_combined_main.h5'\n",
-    "f = h5py.File(filename,\"r\")"
+    "datadir='/home/ubuntu/starnet_data/'  # or \"/path/to/my/starnet/directory\"\n",
+    "\n",
+    "def starnet_download_file(filename):\n",
+    "    vclient = vos.Client()\n",
+    "    vclient.copy('vos:starnet/public/'+filename, datadir+filename)\n",
+    "    print(filename+' downloaded')\n",
+    "\n",
+    "starnet_download_file('apStar_combined_main.h5')\n",
+    "f = h5py.File(datadir+'apStar_combined_main.h5','r')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -115,22 +113,22 @@
    ],
    "source": [
     "print('Dataset keys in file: \\n')\n",
-    "for i in f.keys(): print i"
+    "f.keys()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the testing of StarNet, it is necessary to obtain the spectra, error spectra, combined S/N, and labels, but we need to make eliminations to the test set to obtain the labels of highest validity to compare with, so we will first include the $APOGEE\\_IDs$, the spectra, error spectra, the $S/N$ of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$, $[Fe/H]$, $V_{scatter}$, $STARFLAGs$, and $ASPCAPFLAGs$"
+    "**Load the data into memory**\n",
+    "\n",
+    "For the testing of StarNet, it is necessary to obtain the spectra, error spectra, combined S/N, and labels, but we need to make eliminations to the test set to obtain the labels of highest validity to compare with, so we will first include the APOGEE_IDs, the spectra, error spectra, the S/N of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$, [Fe/H], $V_{scatter}$, STARFLAGs, and ASPCAPFLAGs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -162,16 +160,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a file that contains the mean and std for $T_{\\mathrm{eff}}$, $\\log(g)$, and  $[Fe/H]$ in order to normalize labels during training and testing\n",
-    "ignore values equal to -9999."
+    "**Normalize the data**\n",
+    "\n",
+    "Create a file that contains the mean and standard deviation for $T_{\\mathrm{eff}}$, $\\log(g)$, and  [Fe/H] in order to normalize labels during training and testing ignore values equal to -9999."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -185,7 +182,7 @@
     "mean = np.array([np.mean(teff[teff!=-9999.]),np.mean(logg[logg!=-9999.]),np.mean(fe_h[fe_h!=-9999.])])\n",
     "std = np.array([np.std(teff[teff!=-9999.]),np.std(logg[logg!=-9999.]),np.std(fe_h[fe_h!=-9999.])])\n",
     "mean_and_std = np.row_stack((mean,std))\n",
-    "np.save('mean_and_std', mean_and_std)\n",
+    "np.save(datadir+'mean_and_std', mean_and_std)\n",
     "\n",
     "print('mean_and_std.npy saved')"
    ]
@@ -194,12 +191,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Separate out a dataset with good labels\n",
-    "### Default initial restrictions:\n",
-    "- $STARFLAGs$ = 0\n",
-    "- $ASPCAPFLAGs$ = 0\n",
+    "**Separate out a dataset with good labels**. \n",
+    "- STARFLAGs = 0\n",
+    "- ASPCAPFLAGs = 0\n",
     "- 4000K < $T_{\\mathrm{eff}}$ < 5500K\n",
-    "- -3.0 < $[Fe/H]$\n",
+    "- -3.0 < [Fe/H]\n",
     "- $\\log(g)$ $\\neq$ -9999. (value defined by ASPCAP when no ASPCAP labels are given)\n",
     "- $V_{scatter}$ < 1.0 km/s"
    ]
@@ -221,9 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -251,15 +245,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load high_snr_test_apids.npy \n",
-    "A file that contains the APOGEE IDs for High S/N spectra that will be processed into the High S/N test set (file can be obtained in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded from $1\\_Download\\_Data.ipynb$)"
+    "**Load high S/N APOGEE IDs**\n",
+    "\n",
+    "Load a file that contains the APOGEE IDs for High S/N spectra that will be processed into the High S/N test set**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -270,15 +265,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## separate data for High S/N test set"
+    "**Separate data for High S/N test set**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -308,10 +301,11 @@
     "collapsed": true
    },
    "source": [
-    "## Normalize spectra:\n",
-    "### 1. separate into three chips\n",
-    "### 2. divide by median value in each chip\n",
-    "### 3. recombine each spectrum into a vector of 7214 flux values"
+    "**Normalize spectra**:\n",
+    "1. separate into three chips\n",
+    "2. divide by median value in each chip\n",
+    "3. recombine each spectrum into a vector of 7214 flux values\n",
+    "4. Error spectra must also be normalized with the same median values for error propagation"
    ]
   },
   {
@@ -334,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -371,18 +363,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Error spectra also must be normalized with the same median values for error propagaton"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -416,15 +399,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save new High S/N test data file with APOGEE IDs, spectra, error spectra, combined S/N and labels"
+    "**Save the new High S/N test data file**\n",
+    "\n",
+    "with APOGEE IDs, spectra, error spectra, combined S/N and labels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -435,7 +418,7 @@
     }
    ],
    "source": [
-    "savename = 'high_snr_test_data.h5'\n",
+    "savename = datadir + 'high_snr_test_data.h5'\n",
     "# if path already exist, you must remove it first using os.remove(savename) \n",
     "#os.remove(savename)\n",
     "dt = h5py.special_dtype(vlen=bytes)\n",
@@ -464,9 +447,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now create Low S/N test set\n",
-    "### default additional restrictions:\n",
-    "- combined S/N < 200"
+    "**Create a low S/N test set**\n",
+    "\n",
+    "1. Add a cut to combined S/N < 200\n",
+    "2. Normalize the spectra as before\n",
+    "3. Save the spectra just like above."
    ]
   },
   {
@@ -483,9 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -510,19 +493,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "## Normalize spectra"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -538,9 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -551,7 +523,7 @@
     }
    ],
    "source": [
-    "# Separate spectra into chips\n",
+    "# Separate spectra into chips/home/ubuntu/conda/lib/python2.7/site-packages/keras/metrics.py\n",
     "\n",
     "blue_sp = low_snr_spectra[:,blue_chip_begin:blue_chip_end]\n",
     "green_sp = low_snr_spectra[:,green_chip_begin:green_chip_end]\n",
@@ -574,20 +546,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "## Normalize error spectra"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -618,20 +579,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "# Save new Low S/N test data file with APOGEE IDs, spectra, error spectra, combined S/N and labels"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -642,7 +592,7 @@
     }
    ],
    "source": [
-    "savename = 'low_snr_test_data.h5'\n",
+    "savename = datadir+'low_snr_test_data.h5'\n",
     "# if path already exist, you must remove it first using os.remove(savename) \n",
     "#os.remove(savename)\n",
     "dt = h5py.special_dtype(vlen=bytes)\n",
@@ -664,17 +614,8 @@
     "    combined_snr_ds[:] = low_snr_combined_snr\n",
     "    ap_id_ds[:] = low_snr_ap_id.tolist()\n",
     "\n",
-    "print(savename+' has been saved as the Low S/N test set to be used in 5_Test_Model.ipynb')"
+    "print(savename + ' has been saved as the Low S/N test set to be used in 5_Test_Model.ipynb')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
